2008-02-03  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/gstbin.c: (gst_bin_get_type), (gst_bin_class_init):
	* gst/gstpipeline.c: (gst_pipeline_get_type),
	(gst_pipeline_class_init):
	* libs/gst/base/gstbasesink.c: (gst_base_sink_get_type),
	(gst_base_sink_class_init):
	* libs/gst/base/gstbasesrc.c: (gst_base_src_get_type),
	(gst_base_src_class_init):
	* libs/gst/base/gstbasetransform.c: (gst_base_transform_get_type),
	(gst_base_transform_class_init):
	* libs/gst/base/gstcollectpads.c: (gst_collect_pads_base_init),
	(gst_collect_pads_class_init):
	* libs/gst/base/gstdataqueue.c: (gst_data_queue_get_type):
	* libs/gst/net/gstnettimeprovider.c:
	(gst_net_time_provider_base_init),
	(gst_net_time_provider_class_init):
	* plugins/elements/gstcapsfilter.c: (gst_capsfilter_base_init),
	(gst_capsfilter_class_init):
	* plugins/elements/gstfakesink.c: (gst_fake_sink_base_init),
	(gst_fake_sink_class_init):
	* plugins/elements/gstfakesrc.c: (gst_fake_src_base_init),
	(gst_fake_src_class_init):
	* plugins/elements/gstfdsink.c: (gst_fd_sink_base_init),
	(gst_fd_sink_class_init):
	* plugins/elements/gstfdsrc.c: (gst_fd_src_base_init),
	(gst_fd_src_class_init):
	* plugins/elements/gstfilesink.c: (gst_file_sink_base_init),
	(gst_file_sink_class_init):
	* plugins/elements/gstfilesrc.c: (gst_file_src_base_init),
	(gst_file_src_class_init):
	* plugins/elements/gstidentity.c: (gst_identity_base_init),
	(gst_identity_class_init):
	* plugins/elements/gstmultiqueue.c: (gst_multi_queue_base_init),
	(gst_multi_queue_class_init):
	* plugins/elements/gstqueue.c: (gst_queue_base_init),
	(gst_queue_class_init):
	* plugins/elements/gsttee.c: (gst_tee_base_init),
	(gst_tee_class_init):
	* plugins/elements/gsttypefindelement.c:
	(gst_type_find_element_base_init),
	(gst_type_find_element_class_init):
	Don't use base_init where not absolutely necessary. For example it's
	not necessary anymore for adding pad templates or setting element
	details.
