@@ -578,6 +578,31 @@ GST_START_TEST (test_sink_unref_unlink)
 
 GST_END_TEST;
 
+/* gst_pad_get_caps should return a copy of the caps */
+GST_START_TEST (test_get_caps_must_be_copy)
+{
+  GstPad *pad;
+  GstCaps *caps;
+  GstPadTemplate *templ;
+
+  caps = gst_caps_new_any ();
+  templ =
+      gst_pad_template_new ("test_templ", GST_PAD_SRC, GST_PAD_ALWAYS, caps);
+  pad = gst_pad_new_from_template (templ, NULL);
+  fail_unless (GST_PAD_CAPS (pad) == NULL, "caps present on pad");
+  caps = gst_pad_get_caps (pad);
+
+  /* we must own the caps */
+  ASSERT_OBJECT_REFCOUNT (caps, "caps", 1);
+
+  /* cleanup */
+  gst_caps_unref (caps);
+  gst_object_unref (pad);
+  gst_object_unref (templ);
+}
+
+GST_END_TEST;
+
 Suite *
 gst_pad_suite (void)
 {
@@ -599,6 +624,7 @@ gst_pad_suite (void)
   tcase_add_test (tc_chain, test_push_negotiation);
   tcase_add_test (tc_chain, test_src_unref_unlink);
   tcase_add_test (tc_chain, test_sink_unref_unlink);
+  tcase_add_test (tc_chain, test_get_caps_must_be_copy);
 
   return s;
 }
