@@ -1,3 +1,10 @@
+2008-02-04  Thijs Vermeir  <thijsvermeir@gmail.com>
+
+	* gst/gstpad.c:
+	* tests/check/gst/gstpad.c:
+	Be sure that we have a new copy of the caps and not
+	reffed caps from a template
+
 2008-02-03  Sebastian Dröge  <slomo@circular-chaos.org>
 
 	* gst/gstbin.c: (gst_bin_get_type), (gst_bin_class_init):
